tests/context_unknown_with_field_bad.stderr
tests/context_unknown_with_field_bad.sl:13:13: error: SL2032: unknown context field in with clause
